--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
     crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1d95f83e13.js" crossorigin="anonymous"></script>
   </body>
 </html>
