updated head in index.html so thumbnail displays on linkedin

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <!--  -->
+    <meta name="description" content="Jenny McGrath's Portfolio" />
+    <meta name="title" property="og:title" content="Jenny McGrath's Portfolio" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="../src/imgs/portfolio.PNG" />
+    <meta name="description" property="og:description" content="Jenny McGrath's Portfolio" />
+    <meta name="author" content="Jenny McGrath" />
     <title>Jenny McGrath's Portfolio</title>
   </head>
   <body>
