last try trying to get thumbnail to show on linkedIn

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta name="description" content="Jenny McGrath's Portfolio" />
     <meta name="title" property="og:title" content="Jenny McGrath's Portfolio" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://unsplash.com/photos/A7GMPb4VUkY" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51828758858_ec325183d5_b.jpg" />
     <meta name="description" property="og:description" content="Jenny McGrath's Portfolio" />
     <meta name="author" content="Jenny McGrath" />
     <title>Jenny McGrath's Portfolio</title>
