customized favicon to be JM logo

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head profile="http://www.jennymarie1027.com">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,6 +26,8 @@
     <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51829135074_0c23974189_b.jpg" />
     <meta name="description" property="og:description" content="Jenny McGrath's Portfolio" />
     <meta name="author" content="Jenny McGrath" />
+    <!--  -->
+    <link rel="icon" type="image/png" href="https://live.staticflickr.com/65535/51827870497_fd66a7f423_t.jpg">
     <title>Jenny McGrath's Portfolio</title>
   </head>
   <body>
